# polaris_backend_modelops

./: .env.example  .gitignore  AIOPS_CICD_GUIDE.md  AIOPS_SETUP_GUIDE.md  BATCH_JOBS.md  BATCH_SCHEDULE_GUIDE.md  DOCKER_REGISTRY_LOWERCASE_ISSUE.md  Dockerfile  ENV_SETUP_GUIDE.md  README.md  batch_save_test.py  check_db_schema.py  consolidated_test_results.md  create_tables.py  deploy.sh  dh_test.txt  docker-build.sh  docker-deploy.sh  main.py  main_backup.py  monitor.sh  pyproject.toml  quick_test.py  run_evaal_sk.py  run_step3_only.py  run_three_sites_full.py  test_aal_calculation.py  test_agent_data_loading.py  test_all_agents_db_trace.py  test_all_agents_variables_trace.py  test_all_variables_trace.py  test_all_vulnerability_agents.py  test_batch_all_variables.py  test_batch_refactor.py  test_batch_single_grid.py  test_complete_system.py  test_db_connection.py  test_evaal.py  test_evaal_flow.py  test_exposure.py  (+7 more)
.claude/: settings.local.json
ETL/: .env.example  .gitignore  01_run_all_etl.py  02.1_load_sk_sites_climate.py  02_load_climate_geocode.py  03.1_load_buildings_example.py  03_load_buildings.py  README.md  USAGE.md  __init__.py  add_4sgg_climate.py  building_characteristics_loader.py  building_characteristics_loader.py.backup  pyproject.toml  reload_climate_2grids.py  reload_sgg261.py  requirements.txt  test_sample_load.sh  todo.md  utils.py
ETL/api/scripts/: 01_load_river_info.py  02_load_emergency_messages.py  03_load_vworld_geocode.py  04_load_typhoon.py  05_load_wamis.py  06_load_buildings.py  15_load_disaster_yearbook.py  16_load_typhoon_besttrack.py  run_all.py  utils.py
ETL/etl_base/: README.md
ETL/etl_base/api/scripts/: 01_load_river_info.py  02_load_emergency_messages.py  04_load_typhoon.py  06_load_buildings.py  17_load_sgis_population.py  utils.py
ETL/etl_base/local/docs/: rule.md
ETL/etl_base/local/scripts/: 01_load_admin_regions.py  04_load_population.py  05_load_landcover.py  06_load_dem.py  08_load_climate_grid.py  09_load_sea_level.py  11_load_site_data.py  extract_kma_files.py  utils.py
ETL/local/scripts/: 01_load_admin_regions.py  02_load_weather_stations.py  03_load_grid_station_mappings.py  04_load_population.py  05_load_landcover.py  06_load_dem.py  07_load_drought.py  08_load_climate_grid.py  09_load_sea_level.py  10_load_water_stress.py  11_load_site_data.py  run_all.py  utils.py
ETL/scripts/: __init__.py  db_config.py  extract_monthly_nc.sh  inspect_netcdf.py  load_admin_regions.py  load_climate_data.py  load_dem.py  load_drought.py  load_grid_station_mappings.py  load_kma_asc_data.py  load_landcover.py  load_monthly_grid_data.py  load_monthly_grid_data.py.backup_longformat  load_population.py  load_sea_level_netcdf.py  load_sgg261_data.py  load_site_campus_energy.py  load_site_campus_energy_simple.py  load_site_dc_power.py  load_site_dc_power_simple.py  load_water_stress_rankings.py  load_weather_stations.py  load_yearly_grid_data.py  load_yearly_grid_data.py.backup_longformat
ai_agent/: development_standard.md
docs/: 2025-12-13_location_admin_population_current.md  AAL_METHODOLOGY.md  AAL_Risk_Assessment_Methodology_v2.0_Academic.tex  API_TEST_GUIDE.md  DB_Schema_Discrepancy_Report.md  DB_Schema_Modification_Request.md  DB팀_전달_요청사항.md  DEPLOYMENT_GUIDE.md  Datawarehouse (12).dbml  Datawarehouse.dbml  (+26 more)
physical_risk_module_core_merge/: .gitignore  pyproject.toml
physical_risk_module_core_merge/Physical_RISK_calculate/docs/: CURRENT_DATA_ISSUES.md
physical_risk_module_core_merge/Physical_RISK_calculate/docs/01_project_overview/: API_IMPLEMENTATION_STATUS.md  CODE_MODULES.md  DATA_SOURCES.md  README.md  SK AX 기후리스크 분석 프로젝트 - 데이터 상세 정리.md  SYSTEM_ARCHITECTURE.md  architecture_v3.md  claude_FP.md  standards_core.md
physical_risk_module_core_merge/Physical_RISK_calculate/docs/03_api_documentation/: README.md
physical_risk_module_core_merge/Physical_RISK_calculate/docs/03_api_documentation/guides/: 01_공공데이터포털_API.md  02_재난안전데이터공유플랫폼_API.md  03_기상청_API.md  03_기상청_태풍베스트트랙_API.md  05_SGIS_인구통계_API.md  API_테스트_결과_종합.md  OpenAPI활용가이드-_건축HUB_건축물대장_1.0.md  README.md  WMS.md  api_key.md  dart.md  firestation.md  groundwater.md  heating.md  kwater_dam.md  population.md  precipitation.md  shelter.md  wamis.md  wildfiremap.md
physical_risk_module_core_merge/Physical_RISK_calculate/docs/03_api_documentation/references/: 연도별 자연재해 피해_컬럼정의서.xlsx
physical_risk_module_core_merge/Physical_RISK_calculate/docs/04_risk_analysis/: README.md
physical_risk_module_core_merge/Physical_RISK_calculate/docs/04_risk_analysis/hazard_types/: coastal_flood_risk.md  drought_risk.md  extreme_cold_risk.md  extreme_heat.md  inland_flood_risk.md  typhoon_risk.md  urban_flood_risk.md  water_stress_risk.md  wildfire_risk.md
physical_risk_module_core_merge/Physical_RISK_calculate/docs/04_risk_analysis/methodology/: SSP_scenario_api.md  code_docx_diff.md  hazard_scenarios.md  logic_doc_changes.md
physical_risk_module_core_merge/Physical_RISK_calculate/src/calculators/: address_based_calculator.py  exposure_calculator.py  fwi_calculator.py  hazard_calculator.py  risk_calculator.py  vulnerability_calculator.py
physical_risk_module_core_merge/Physical_RISK_calculate/src/common/: config.py
physical_risk_module_core_merge/Physical_RISK_calculate/tests/: test_risk_comparison.py
(+312 files in other folders)
