'''
SKALA Physical Risk AI System - Database Setup
Database schema creation and data loading scripts

Last Modified: 2025-11-19
Version: v01
'''

[project]
name = "skala-db-setup"
version = "1.0.0"
description = "PostgreSQL database setup and data loading for SKALA Physical Risk AI System"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "geopandas>=0.14.1",
    "pandas>=2.1.3",
    "python-dotenv>=1.0.0",
    "netCDF4>=1.6.5",
    "xarray>=2023.12.0",
    "rasterio>=1.3.9",
    "shapely>=2.0.2",
    "pyproj>=3.6.1",
    "tqdm>=4.66.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]
